+ base layout and modules architecture for each page of application

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title> Dft base Angular application </title>
-  <base href="/">
+    <head>
+        <base href="/">
+        <meta charset="utf-8">
+        <title> Dft base Angular application </title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+    </head>
+    <!-- angular template root component goes here -->
+    <body id="layout">
+        <!-- preloader app initializing loading -->
+        <div class="def-preloader">
+            <div id="SPW">
+                <div id="SP_1" class="sp"></div> <div id="SP_2" class="sp"></div> <div id="SP_3" class="sp"></div> <div id="SP_4" class="sp"></div>
+                <div id="SP_5" class="sp"></div> <div id="SP_6" class="sp"></div> <div id="SP_7" class="sp"></div> <div id="SP_8" class="sp"></div>
+            </div>
+        </div>
+    </body>
 </html>
